# Edith

./: .cursorignore  .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json  wrangler.toml
.cursor/: mcp.json
.cursor/commands/: commit.md  createPullRequest.md  update-dependencies.md  verify-pr-comments.md
.cursor/rules/: prompt-engineering-gpt-5.5.mdc  prompt-engineering-opus-4.7.mdc  prompt-engineering.mdc  remotion.mdc
.github/workflows/: ci.yml  typecheck.yml
apps/frontend/: .env.example  README.md  components.json  deploy.ts  next.config.ts  package.json  proxy.ts  remotion.config.ts  vercel.json
apps/media-processor/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package.json
apps/media-processor/scripts/: dev.mjs  dev.sh
apps/media-processor/src/: config.rs  main.rs
apps/media-processor/src/routes/: mod.rs  upload.rs
apps/media-processor/src/services/: ffmpeg.rs  mod.rs
apps/server/: .env.example  Dockerfile  README.md  config.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  words.json
docs/: EDITH_MIGRATION_MATRIX.md  EDITH_MVP_README.md  EDITH_REPO_AUDIT.md  EDITH_TARGET_ARCHITECTURE.md  QUOTA_INTEGRATION_PLAN.md  STRIPE_AUDIT.md  SUPABASE_AUDIT.md  WAKE_UP_RECAP.md
modal/: DEPLOY.md  README.md  render_worker.py  requirements.txt
scripts/: portless-url.sh  run-with-portless.sh  stop-dev-processes.sh
scripts/stripe/: README.md  (+1 more)
supabase/: schema.sql
(+580 files in other folders)
