[package]
name = "media-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# AWS S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment and config
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4"] }
bytes = "1"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# HTTP client for JWT generation
reqwest = { version = "0.12", features = ["json"] }

# Process execution for ffmpeg
tokio-process = "0.2"
